Chore: fix website layout to render correctly on mobile (#796)
* Chore: fix website layout to render correctly on mobile


* chore: fix nav item alignment


* fix content  overflow


* fix scroll behavior for vertical overflow


* make contents span entire width on mobile


* use appropriate css unit


* fix content alignment

--- a/assets/sass/nav.sass
+++ b/assets/sass/nav.sass
@@ -77,4 +77,6 @@
 .navbar-dropdown .navbar-item
 	color: #4a4a4a
 
-
+@media screen and (max-width: 1024px)
+  .is-fixed-top
+    overflow: hidden
